# Phone-number-management-program

./: CMakeLists.txt  README.md
PhoneNumber Management Program/: RegFromFile.c  RegToFile.c  main.c  sort.c
header/: my_func.h
src/: CMakeLists.txt  find.c  insert.c
소스 파일/: delete.c  print.c
헤더 파일/: my_define.h  my_struct.h
